--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,4 @@
+
 buildscript {
     ext.kotlin_version = '1.7.10'
     repositories {
@@ -15,6 +16,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://api.mapbox.com/downloads/v2/releases/maven' }
     }
 }
 
