--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: menufy
+name: hello_world
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -35,10 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.6
-  intl: ^0.18.1
-
+  mapbox_gl: ^0.13.0
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
 dev_dependencies:
+  hive_generator: ^1.1.0
+  build_runner: ^2.1.5
   flutter_test:
     sdk: flutter
 
@@ -90,3 +92,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
